--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -1,4 +1,95 @@
 ####################################################################
+#    ____  _   _
+#   / ___|| | | |
+#   \___ \| |_| |
+#    ___) |  _  |
+#   |____/|_| |_|
+####################################################################
+shanghai:
+  address: 浦软会议厅
+  address_en: "TBD"
+  venue: TBD
+  venue_en: TBD
+  traffic: (...)
+  traffic_en: "(...)"
+  maplink: '...'
+  date: 2015-09-12 09:00~18:00
+  notices: ...
+  morning:
+    - time: "09:00"
+      topic: "签到 & 开场"
+      topic_en: "Check-in"
+    - time: "09:45"
+      topic: "开场"
+      topic_en: "Opening"
+    - { time: "10:00", speaker: id_yankaish }
+    - { time: "11:00", speaker: id_shenweish }
+  noon:
+    - time: "12:00"
+      topic: 午餐+合照
+      topic_en: Lunch + Photo
+  afternoon:
+    - { time: "14:00", speaker: id_nonesh }
+    - { time: "14:40", speaker: id_dinglaiqiangsh }
+    - { time: "15:20", speaker: id_wangliqi }
+    - time: "16:00"
+      topic: 茶歇
+      topic_en: Intermission
+    - { time: "16:10", speaker: id_chenhaibo }
+    - { time: "17:00", speaker: id_xuzhou }
+  lightening_talks:
+    - { time: "17:30", speaker: id_xiaokai }
+  cancel_talks:
+    - { time: "(ー`´ー)", speaker: id_nonesh }
+
+
+####################################################################
+#   广州
+#     ____ _____
+#    / ___|__  /
+#   | |  _  / /
+#   | |_| |/ /_
+#    \____/____|
+#   
+####################################################################
+guangzhou:
+  address: UC 培训大厅
+  address_en: "TBD"
+  venue: TBD
+  venue_en: TBD
+  traffic: (...)
+  traffic_en: "(...)"
+  maplink: '...'
+  date: 2015-09-13 09:00~18:00
+  notices: ...
+  morning:
+    - time: "09:00"
+      topic: "签到 & 开场"
+      topic_en: "Check-in"
+    - time: "09:45"
+      topic: "开场"
+      topic_en: "Opening"
+    - { time: "10:00", speaker: id_shenweigz }
+    - { time: "11:00", speaker: id_JokerQyou }
+  noon:
+    - time: "12:00"
+      topic: 午餐+合照
+      topic_en: Lunch + Photo
+  afternoon:
+    - { time: "14:00", speaker: id_river }
+    - { time: "14:40", speaker: id_nonegz }
+    - { time: "15:20", speaker: id_zuozhenjie }
+    - time: "16:00"
+      topic: 茶歇
+      topic_en: Intermission
+    - { time: "16:10", speaker: id_nonegz }
+    - { time: "17:00", speaker: id_nonegz }
+  lightening_talks:
+    - { time: "17:30", speaker: id_nonegz }
+  cancel_talks:
+    - { time: "(ー`´ー)", speaker: id_nonegz }
+
+####################################################################
 #    ____  _
 #   | __ )(_)
 #   |  _ \| |
@@ -20,80 +111,29 @@ beijing:
     - time: "09:00"
       topic: "签到 & 开场"
       topic_en: "Check-in"
-    - time: "09:30"
+    - time: "09:45"
       topic: "开场"
       topic_en: "Opening"
-    - { time: "09:45", speaker: id_xutao }
-    - { time: "10:25", speaker: id_zhengkun }
-    - { time: "11:05", speaker: id_dongwei }
-    - { time: "11:45", speaker: id_gaochitao }
+    - { time: "10:00", speaker: id_yankaibj }
+    - { time: "11:00", speaker: id_none }
   noon:
-    - time: "12:15"
+    - time: "12:00"
       topic: 午餐+合照
       topic_en: Lunch + Photo
   afternoon:
-    - { time: "13:10", speaker: id_wangwei }
-    - { time: "13:50", speaker: id_laike9m }
-    - { time: "14:30", speaker: id_weizeren }
-    - { time: "15:00", speaker: id_linshuai }
-    - time: "15:10"
+    - { time: "14:00", speaker: id_dinglaiqiang }
+    - { time: "14:40", speaker: id_liaoxinxi }
+    - { time: "15:20", speaker: id_dujun }
+    - time: "16:00"
       topic: 茶歇
       topic_en: Intermission
+    - { time: "16:10", speaker: id_huangjin }
+    - { time: "17:00", speaker: id_linpan }
   lightening_talks:
-    - { time: "15:20", speaker: id_quchifeng }
-    - { time: "15:30", speaker: id_chenjian }
-    - { time: "15:40", speaker: id_quxiaolong }
-    - { time: "15:50", speaker: id_liuxiaoming }
-    - { time: "16:00", speaker: id_bjdujun }
-    - { time: "16:10", speaker: id_binux }
-    - { time: "16:20", speaker: id_caibin }
-    - { time: "16:30", speaker: id_xianjianjun }
-    - { time: "16:40", speaker: id_liangjie }
+    - { time: "17:30", speaker: id_wangzhili }
   cancel_talks:
-    - { time: "(ー`´ー)", speaker: id_yanglin }
-    - { time: "(ー`´ー)", speaker: id_luozhicheng }
-    - { time: "(ー`´ー)", speaker: id_kanglei }
-    - { time: "(ー`´ー)", speaker: id_likuan }
+    - { time: "(ー`´ー)", speaker: id_none }
 
-####################################################################
-#    ____  _   _
-#   / ___|| | | |
-#   \___ \| |_| |
-#    ___) |  _  |
-#   |____/|_| |_|
-####################################################################
-shanghai:
-  address: TBD
-  venue: TBD
-  traffic: TBD
-  date: 2015-09-17 09:00~18:00
-  notices: ""
-  morning:
-  noon:
-  afternoon:
-  lightening_talks:
-
-
-####################################################################
-#   广州
-#     ____ _____
-#    / ___|__  /
-#   | |  _  / /
-#   | |_| |/ /_
-#    \____/____|
-#   
-####################################################################
-guangzhou:
-  address: TBD
-  venue: TBD
-  traffic: TBD
-  notices: (￣▽￣)
-  date: 2015-09-17 09:30~18:05
-  morning:
-  noon:
-  afternoon:
-  lightening_talks:
-  cancel_talks:
 
 ####################################################################
 #   珠三角
