appended zh chenghaibo foto

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -105,7 +105,7 @@ id_chenhaibo:
   city_shanghai: 1
   city: 上海
   city_en: Shanghai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff15/id/sh_chenghaibo.jpg?imageView2/2/h/80
   intro: 在Python与桌面软件编程上，有比较多的涉猎
   intro_en: Pythoneer...
   topic:
