appended news info.

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -102,6 +102,8 @@ sponsors_hint_en: >
   (<a href="mailto:stingchen@topgeek.org">stingchen@topgeek.org</a>).
   We will show the logo and introduction of all sponsors on the home page
   of our official website
+sponsors_customization: 独家招聘合作伙伴
+sponsors_customization_en: Diamond
 sponsors_diamond: 钻石
 sponsors_diamond_en: Diamond
 sponsors_platinum: 白金
